--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <h2 class="title">About me</h2>
         <p class="description">
           지속적으로 기술 스택을 업데이트하고 새로운 기술을 적용하여 서비스를
-          혁신하며, 항상 사용자들에게 더 나은 사용자 경험을 제공하려고
+          혁신하며, 사용자들에게 더 나은 사용자 경험을 제공하려고 항상
           노력합니다.
         </p>
         <ul class="advantages">
@@ -404,50 +404,50 @@
                   <p class="description-content-title">[역할]</p>
                   <ul class="description-text">
                     <li>
-                      <i class="fa-solid fa-check"></i>
+                      <i class="check-icon fa-solid fa-check"></i>
                       공지사항, 일정페이지, 오픈프로필 페이지, 전체 검색 페이지,
                       알림 모달, 헤더(메뉴), 푸터 UI 및 기능 구현
                     </li>
                     <li>
-                      <i class="fa-solid fa-check"></i> 각 페이지 마다
-                      페이지네이션 또는 무한스크롤 적용, 반응형 웹 적용
+                      <i class="check-icon fa-solid fa-check"></i> 각 페이지
+                      마다 페이지네이션 또는 무한스크롤 적용, 반응형 웹 적용
                     </li>
                   </ul>
                   <p class="description-content-title">[성과]</p>
                   <ul class="description-text">
                     <li>
-                      <i class="fa-solid fa-check"></i>
+                      <i class="check-icon fa-solid fa-check"></i>
                       Intersection Observer API와 react-query에
                       useInfiniteQuery를 사용하여 무한스크롤 적용
                     </li>
                     <li>
-                      <i class="fa-solid fa-check"></i>
+                      <i class="check-icon fa-solid fa-check"></i>
                       CSS 미디어 쿼리를 사용하여 데스크탑, 태블릿, 모바일 각
                       사이즈로 반응형 웹 적용
                     </li>
                     <li>
-                      <i class="fa-solid fa-check"></i>
+                      <i class="check-icon fa-solid fa-check"></i>
                       Full-Calendar 라이브러리를 이용하여 서버에서 응답 받은
                       중요 일정 데이터를 캘린더에 적용
                     </li>
                     <li>
-                      <i class="fa-solid fa-check"></i>
+                      <i class="check-icon fa-solid fa-check"></i>
                       공지사항 페이지 검색창에 디바운싱을 활용하여 사용자가
                       타이핑이 끝난 후에 이벤트를 호출할 수 있도록 하여 이벤트를
                       최적화 함
                     </li>
                     <li>
-                      <i class="fa-solid fa-check"></i>
+                      <i class="check-icon fa-solid fa-check"></i>
                       코드 유지보수성 및 재활용성을 높이기 위해 컴포넌트 추상화
                     </li>
                     <li>
-                      <i class="fa-solid fa-check"></i>
+                      <i class="check-icon fa-solid fa-check"></i>
                       댓글 알림 및 중요 일정 알림을 서버와 polling 방식으로
                       응답을 주고 받아 실시간으로 업데이트하여 사용자에게 최신
                       정보를 지속적으로 전달
                     </li>
                     <li>
-                      <i class="fa-solid fa-check"></i>
+                      <i class="check-icon fa-solid fa-check"></i>
                       react-query를 통해 서버에 요청하여 받아온 데이터를
                       캐싱하여, 이후 동일한 요청을 할 때 불필요한 서버 호출을
                       최소화
@@ -457,8 +457,8 @@
                   <ul class="description-text">
                     <li>
                       <strong class="description-text-strong"
-                        ><i class="fa-solid fa-check"></i> 데이터 캐싱 개념
-                        이해와 활용 가능</strong
+                        ><i class="check-icon fa-solid fa-check"></i> 데이터
+                        캐싱 개념 이해와 활용 가능</strong
                       >
                       <p>
                         데이터 캐싱을 활용하여 서버에 반복 요청을 줄여 네트워크
@@ -467,8 +467,8 @@
                     </li>
                     <li>
                       <strong class="description-text-strong"
-                        ><i class="fa-solid fa-check"></i> 디바운싱과 쓰로틀링
-                        개념 이해와 활용 가능</strong
+                        ><i class="check-icon fa-solid fa-check"></i> 디바운싱과
+                        쓰로틀링 개념 이해와 활용 가능</strong
                       >
                       <p>
                         이벤트를 제어하는 기법인 디바운싱과 쓰로틀링에 대한
@@ -478,8 +478,8 @@
                     </li>
                     <li>
                       <strong class="description-text-strong"
-                        ><i class="fa-solid fa-check"></i> 중복되는 로직은
-                        custom hook을 만들어 활용</strong
+                        ><i class="check-icon fa-solid fa-check"></i> 중복되는
+                        로직은 custom hook을 만들어 활용</strong
                       >
                       <p>
                         프로젝트 중 무한 스크롤을 구현하기 위해 여러
@@ -563,15 +563,15 @@
                   <p class="description-content-title">[역할]</p>
                   <ul class="description-text">
                     <li>
-                      <i class="fa-solid fa-check"></i> 서버 구축, 상품 및
-                      카테고리 스키마 설계
+                      <i class="check-icon fa-solid fa-check"></i> 서버 구축,
+                      상품 및 카테고리 스키마 설계
                     </li>
                     <li>
-                      <i class="fa-solid fa-check"></i>
+                      <i class="check-icon fa-solid fa-check"></i>
                       관리자 페이지 카테고리 목록, 상품 CRUD API 구현
                     </li>
                     <li>
-                      <i class="fa-solid fa-check"></i>
+                      <i class="check-icon fa-solid fa-check"></i>
                       메인페이지 상품 검색, 상품 목록(필터 및 페이지네이션),
                       상품상세 API 구현
                     </li>
@@ -579,24 +579,24 @@
                   <p class="description-content-title">[성과]</p>
                   <ul class="description-text">
                     <li>
-                      <i class="fa-solid fa-check"></i> Express를 이용하여 웹
-                      서버 구축
+                      <i class="check-icon fa-solid fa-check"></i> Express를
+                      이용하여 웹 서버 구축
                     </li>
                     <li>
-                      <i class="fa-solid fa-check"></i> Express를 이용하여 미들
-                      웨어를 통한 에러 핸들링 로직 구현 하여 유지보수 및 가독성
-                      높임
+                      <i class="check-icon fa-solid fa-check"></i> Express를
+                      이용하여 미들 웨어를 통한 에러 핸들링 로직 구현 하여
+                      유지보수 및 가독성 높임
                     </li>
                     <li>
-                      <i class="fa-solid fa-check"></i> Express를 이용하여 CRUD
-                      RESTfull API를 구현함
+                      <i class="check-icon fa-solid fa-check"></i> Express를
+                      이용하여 CRUD RESTfull API를 구현함
                     </li>
                     <li>
-                      <i class="fa-solid fa-check"></i> POSTMAN으로 구현한 API
-                      기능을 문서화(명세서) 함
+                      <i class="check-icon fa-solid fa-check"></i> POSTMAN으로
+                      구현한 API 기능을 문서화(명세서) 함
                     </li>
                     <li>
-                      <i class="fa-solid fa-check"></i>
+                      <i class="check-icon fa-solid fa-check"></i>
                       MVC 패턴을 적용하여 코드간의 종속성을 줄이고 구성요소간의
                       역할을 명확하게 하여 유지보수성을 높임
                     </li>
@@ -605,8 +605,8 @@
                   <ul class="description-text">
                     <li>
                       <strong class="description-text-strong"
-                        ><i class="fa-solid fa-check"></i> 클라이언트와 서버
-                        간의 통신 흐름 이해</strong
+                        ><i class="check-icon fa-solid fa-check"></i>
+                        클라이언트와 서버 간의 통신 흐름 이해</strong
                       >
                       <p>
                         서버 API 개발을 통해 클라이언트와 서버 간의 데이터
@@ -616,8 +616,8 @@
                     </li>
                     <li>
                       <strong class="description-text-strong"
-                        ><i class="fa-solid fa-check"></i> NoSQL 데이터베이스
-                        시스템과 원리 이해</strong
+                        ><i class="check-icon fa-solid fa-check"></i> NoSQL
+                        데이터베이스 시스템과 원리 이해</strong
                       >
                       <p>
                         기존의 관계형 데이터베이스 시스템과는 다른 방식으로
@@ -773,30 +773,31 @@
                   <p class="description-content-title">[역할]</p>
                   <ul class="description-text">
                     <li>
-                      <i class="fa-solid fa-check"></i>
+                      <i class="check-icon fa-solid fa-check"></i>
                       Chart.js 라이브러리 활용하여 재고 현황 동적인 그래프
                       시각화 구현
                     </li>
                     <li>
-                      <i class="fa-solid fa-check"></i>
+                      <i class="check-icon fa-solid fa-check"></i>
                       아이템 및 디바이스별로 재고 현황 상세 확인 , 재고관리
                       (추가, 수정, 삭제) UI 및 기능 구현
                     </li>
                     <li>
-                      <i class="fa-solid fa-check"></i> 날짜와 시간을 지정하여
-                      보고서 다운로드, 보고서 작성 시간 알림 지정 UI 및 기능
-                      구현
+                      <i class="check-icon fa-solid fa-check"></i> 날짜와 시간을
+                      지정하여 보고서 다운로드, 보고서 작성 시간 알림 지정 UI 및
+                      기능 구현
                     </li>
                   </ul>
                   <p class="description-content-title">[성과]</p>
                   <ul class="description-text">
                     <li>
-                      <i class="fa-solid fa-check"></i> Chart.js 라이브러리의
-                      각종 옵션 및 플러그인들을 커스텀하여 활용 가능
+                      <i class="check-icon fa-solid fa-check"></i> Chart.js
+                      라이브러리의 각종 옵션 및 플러그인들을 커스텀하여 활용
+                      가능
                     </li>
                     <li>
-                      <i class="fa-solid fa-check"></i> Chart.js를 이용하여
-                      동적인 그래프 및 각종 차트 구현 가능
+                      <i class="check-icon fa-solid fa-check"></i> Chart.js를
+                      이용하여 동적인 그래프 및 각종 차트 구현 가능
                     </li>
                   </ul>
                 </section>
