Design : 프로젝트 설명 카드 style 수정

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                     </li>
                   </ul>
                 </section>
-                <section class="description-content detail">
+                <section class="description-content role">
                   <p class="description-content-title">[역할]</p>
                   <ul class="description-text">
                     <li>
@@ -272,6 +272,8 @@
                       마다 페이지네이션 또는 무한스크롤 적용, 반응형 웹 적용
                     </li>
                   </ul>
+                </section>
+                <section class="description-content detail">
                   <p class="description-content-title">[성과]</p>
                   <ul class="description-text">
                     <li>
@@ -312,41 +314,42 @@
                       최소화
                     </li>
                   </ul>
-                  <p class="description-content-title">[배운점 및 느낀점]</p>
-                  <ul class="description-text">
-                    <li>
-                      <strong class="description-text-strong"
-                        ><i class="check-icon fa-solid fa-check"></i> 데이터
-                        캐싱 개념 이해와 활용 가능</strong
-                      >
-                      <p>
-                        데이터 캐싱을 활용하여 서버에 반복 요청을 줄여 네트워크
-                        트래픽 감소하며 성능을 향상 시킬 수 있음
-                      </p>
-                    </li>
-                    <li>
-                      <strong class="description-text-strong"
-                        ><i class="check-icon fa-solid fa-check"></i> 디바운싱과
-                        쓰로틀링 개념 이해와 활용 가능</strong
-                      >
-                      <p>
-                        이벤트를 제어하는 기법인 디바운싱과 쓰로틀링에 대한
-                        각각에 개념과 사용하는 목적에 대해 알게 되었으며
-                        디바운싱 코드를 hook으로 만들어 활용하였음
-                      </p>
-                    </li>
-                    <li>
-                      <strong class="description-text-strong"
-                        ><i class="check-icon fa-solid fa-check"></i> 중복되는
-                        로직은 custom hook을 만들어 활용</strong
-                      >
-                      <p>
-                        프로젝트 중 무한 스크롤을 구현하기 위해 여러
-                        컴포넌트에서 겹치는 로직을 hook으로 따로 만듬, 이로 인해
-                        코드의 중복을 최소화 및 유지보수성을 향상 시켜 줌
-                      </p>
-                    </li>
-                  </ul>
+                  <div class="description-content review">
+                    <p class="description-content-title review">
+                      [배운점 및 느낀점]
+                    </p>
+                    <ul class="description-text review">
+                      <li>
+                        <strong class="description-text-strong"
+                          >데이터 캐싱 개념 이해와 활용 가능</strong
+                        >
+                        <p>
+                          데이터 캐싱을 활용하여 서버에 반복 요청을 줄여
+                          네트워크 트래픽 감소하며 성능을 향상 시킬 수 있음
+                        </p>
+                      </li>
+                      <li>
+                        <strong class="description-text-strong">
+                          디바운싱과 쓰로틀링 개념 이해와 활용 가능</strong
+                        >
+                        <p>
+                          이벤트를 제어하는 기법인 디바운싱과 쓰로틀링에 대한
+                          각각에 개념과 사용하는 목적에 대해 알게 되었으며
+                          디바운싱 코드를 hook으로 만들어 활용하였음
+                        </p>
+                      </li>
+                      <li>
+                        <strong class="description-text-strong">
+                          중복되는 로직은 custom hook을 만들어 활용</strong
+                        >
+                        <p>
+                          프로젝트 중 무한 스크롤을 구현하기 위해 여러
+                          컴포넌트에서 겹치는 로직을 hook으로 따로 만듬, 이로
+                          인해 코드의 중복을 최소화 및 유지보수성을 향상 시켜 줌
+                        </p>
+                      </li>
+                    </ul>
+                  </div>
                 </section>
               </div>
             </li>
@@ -418,7 +421,7 @@
                     </li>
                   </ul>
                 </section>
-                <section class="description-content detail">
+                <section class="description-content role">
                   <p class="description-content-title">[역할]</p>
                   <ul class="description-text">
                     <li>
@@ -435,6 +438,8 @@
                       상품상세 API 구현
                     </li>
                   </ul>
+                </section>
+                <section class="description-content detail">
                   <p class="description-content-title">[성과]</p>
                   <ul class="description-text">
                     <li>
@@ -460,31 +465,33 @@
                       역할을 명확하게 하여 유지보수성을 높임
                     </li>
                   </ul>
-                  <p class="description-content-title">[배운점 및 느낀점]</p>
-                  <ul class="description-text">
-                    <li>
-                      <strong class="description-text-strong"
-                        ><i class="check-icon fa-solid fa-check"></i>
-                        클라이언트와 서버 간의 통신 흐름 이해</strong
-                      >
-                      <p>
-                        서버 API 개발을 통해 클라이언트와 서버 간의 데이터
-                        교환과 상호작용에 대한 전반적인 흐름을 익힐 수 있었으며
-                        이로 인해 문제 해결과 원활한 소통 가능
-                      </p>
-                    </li>
-                    <li>
-                      <strong class="description-text-strong"
-                        ><i class="check-icon fa-solid fa-check"></i> NoSQL
-                        데이터베이스 시스템과 원리 이해</strong
-                      >
-                      <p>
-                        기존의 관계형 데이터베이스 시스템과는 다른 방식으로
-                        데이터를 다루고 저장하는 것을 이해하여 상황에 따라
-                        적절한 데이터베이스 사용 가능
-                      </p>
-                    </li>
-                  </ul>
+                  <div class="description-content review">
+                    <p class="description-content-title review">
+                      [배운점 및 느낀점]
+                    </p>
+                    <ul class="description-text review">
+                      <li>
+                        <strong class="description-text-strong">
+                          클라이언트와 서버 간의 통신 흐름 이해</strong
+                        >
+                        <p>
+                          서버 API 개발을 통해 클라이언트와 서버 간의 데이터
+                          교환과 상호작용에 대한 전반적인 흐름을 익힐 수
+                          있었으며 이로 인해 문제 해결과 원활한 소통 가능
+                        </p>
+                      </li>
+                      <li>
+                        <strong class="description-text-strong"
+                          >NoSQL 데이터베이스 시스템과 원리 이해</strong
+                        >
+                        <p>
+                          기존의 관계형 데이터베이스 시스템과는 다른 방식으로
+                          데이터를 다루고 저장하는 것을 이해하여 상황에 따라
+                          적절한 데이터베이스 사용 가능
+                        </p>
+                      </li>
+                    </ul>
+                  </div>
                 </section>
               </div>
             </li>
@@ -546,29 +553,36 @@
                     </li>
                   </ul>
                 </section>
-                <section class="description-content detail">
+                <section class="description-content role">
                   <p class="description-content-title">[역할]</p>
                   <ul class="description-text">
                     <li>
+                      <i class="check-icon fa-solid fa-check"></i>
                       관리자 페이지 게임 정보 등록, 카테고리 등록, 게임 기록
                       관리 (상세보기, 삭제) , 회원 관리 (회원 탈퇴) 기능 및 UI
                       구현
                     </li>
                   </ul>
-                  <p class="description-content-title">[배운점 및 느낀점]</p>
-                  <ul class="description-text">
-                    <li>
-                      <strong class="description-text-strong"
-                        >컴포넌트 설계의 중요성</strong
-                      >
-                      <p>
-                        개발 전 설계를 하지 않으면 컴포넌트 하나에 코드가
-                        길어져서 가독성이 떨어지며 중복되는 코드나 컴포넌트들이
-                        많아져 재사용성이 떨어짐, 유지 보수 및 재사용을 위해
-                        설계 후 개발을 시작해야 되는 걸 느낌
-                      </p>
-                    </li>
-                  </ul>
+                </section>
+                <section class="description-content detail">
+                  <div class="description-content review">
+                    <p class="description-content-title review">
+                      [배운점 및 느낀점]
+                    </p>
+                    <ul class="description-text review">
+                      <li>
+                        <strong class="description-text-strong">
+                          컴포넌트 설계의 중요성</strong
+                        >
+                        <p>
+                          개발 전 설계를 하지 않으면 컴포넌트 하나에 코드가
+                          길어져서 가독성이 떨어지며 중복되는 코드나
+                          컴포넌트들이 많아져 재사용성이 떨어짐, 유지 보수 및
+                          재사용을 위해 설계 후 개발을 시작해야 되는 걸 느낌
+                        </p>
+                      </li>
+                    </ul>
+                  </div>
                 </section>
               </div>
             </li>
@@ -628,7 +642,7 @@
                     </li>
                   </ul>
                 </section>
-                <section class="description-content detail">
+                <section class="description-content role">
                   <p class="description-content-title">[역할]</p>
                   <ul class="description-text">
                     <li>
@@ -647,6 +661,8 @@
                       기능 구현
                     </li>
                   </ul>
+                </section>
+                <section class="description-content detail">
                   <p class="description-content-title">[성과]</p>
                   <ul class="description-text">
                     <li>
