--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
     <!--CSS-->
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/responsive.css" />
+    <link rel="stylesheet" href="css/slide.css" />
     <!--Javascipt-->
     <script type="module" src="src/loadData.js" defer></script>
     <script type="module" src="src/header.js" defer></script>
     <script type="module" src="src/activeMenu.js" defer></script>
+    <script type="module" src="src/slide.js" defer></script>
     <script type="module" src="src/projects.js" defer></script>
   </head>
   <body>
@@ -100,7 +102,139 @@
       <!--About-->
       <section id="about" class="section max-container"></section>
       <!--Skills-->
-      <section id="skills" class="section"></section>
+      <section id="skills" class="section">
+        <section class="slide-content max-container skills-container">
+          <ul class="slide-items">
+            <li class="slide-item">
+              <div class="slide-item-title">
+                <i class="fa-brands fa-html5 title-icon"></i>
+                <p>HTML&CSS</p>
+              </div>
+              <ul class="slide-item-description">
+                <li>
+                  <i class="fa-solid fa-circle-check description-icon"></i>
+                  시맨틱한 마크업에 대해 숙지하고 있으며, 웹 표준, 웹 접근성
+                  등의 규격에 맞춰 소스를 작성할 수 있습니다.
+                </li>
+                <li>
+                  <i class="fa-solid fa-circle-check description-icon"></i>
+                  크로스 브라우징(Cross Browsing)을 해결할 수 있어 다양한 웹
+                  브라우저에서 웹 페이지가 일관되게 동작하도록 할 수 있습니다.
+                </li>
+                <li>
+                  <i class="fa-solid fa-circle-check description-icon"></i>
+                  반응형 웹 디자인을 적용할 수 있어 디스플레이의 종류에 맞게
+                  자연스러운 화면을 구현할 수 있습니다.
+                </li>
+                <li>
+                  <i class="fa-solid fa-circle-check description-icon"></i>
+                  프로젝트에 SCSS(SASS)와 같은 CSS 전처리기를 도입할 수
+                  있습니다.
+                </li>
+                <li>
+                  <i class="fa-solid fa-circle-check description-icon"></i>
+                  UI 프레임워크 / 라이브러리리를 사용하면서 요구사항대로
+                  커스텀을 자유롭게 할 수 있습니다.
+                </li>
+              </ul>
+            </li>
+            <li class="slide-item">
+              <div class="slide-item-title">
+                <i class="fa-brands fa-square-js title-icon"></i>
+                <p>Javascript&Typescript</p>
+              </div>
+              <ul class="slide-item-description">
+                <li>
+                  <i class="fa-solid fa-circle-check description-icon"></i>
+                  Vanilla Javascript를 활용해 DOM을 이해하고 조작할 수 있습니다.
+                </li>
+                <li>
+                  <i class="fa-solid fa-circle-check description-icon"></i>
+                  비동기적 프로그래밍에 대해 이해하고 있으며 비동기 처리를 할 수
+                  있습니다.
+                </li>
+                <li>
+                  <i class="fa-solid fa-circle-check description-icon"></i> ES6+
+                  문법을 이해하고 활용할 수 있습니다.
+                </li>
+                <li>
+                  <i class="fa-solid fa-circle-check description-icon"></i>
+                  Typescript를 적용해 코드의 안정성을 높이고 객체 지향
+                  프로그래밍을 구현할 수 있습니다.
+                </li>
+                <li>
+                  <i class="fa-solid fa-circle-check description-icon"></i>
+                  Typescript를 React 프로젝트에 적용 시킬 수 있으며 타입추론,
+                  제네릭, 추상클래스 등의 개념을 활용할 수 있습니다.
+                </li>
+              </ul>
+            </li>
+            <li class="slide-item">
+              <div class="slide-item-title">
+                <i class="fa-brands fa-react title-icon"></i>
+                <p>React</p>
+              </div>
+              <ul class="slide-item-description">
+                <li>
+                  <i class="fa-solid fa-circle-check description-icon"></i>
+                  적절한 단위로 컴포넌트를 분리하여 구조적으로 설계할 수 있으며,
+                  재사용 가능성이 높은 컴포넌트를 구현할 수 있습니다.
+                </li>
+                <li>
+                  <i class="fa-solid fa-circle-check description-icon"></i>
+                  상태 관리에 대한 이해도가 높고 상태 관리 라이브러리를
+                  프로젝트에 활용 가능합니다.
+                </li>
+                <li>
+                  <i class="fa-solid fa-circle-check description-icon"></i>
+                  라이프 사이클에 대해 이해하고 있으며 이를 활용하여 렌더링을
+                  최적화 할 수 있습니다.
+                </li>
+                <li>
+                  <i class="fa-solid fa-circle-check description-icon"></i>
+                  react hooks을 능숙하게 사용할 수 있으며 반복되는 로직은 custom
+                  hook으로 만들어 사용할 수 있습니다.
+                </li>
+                <li>
+                  <i class="fa-solid fa-circle-check description-icon"></i
+                  >styled-components를 사용하여 스타일링 할 수 있습니다.
+                </li>
+              </ul>
+            </li>
+            <li class="slide-item">
+              <div class="slide-item-title">
+                <i class="fa-solid fa-screwdriver-wrench title-icon"></i>
+                <p>Tools</p>
+              </div>
+              <ul class="slide-item-description">
+                <li>
+                  <i class="fa-solid fa-circle-check description-icon"></i>
+                  git의 기본 명령어를 이해하고 사용할 수 있으며, 깃 브랜치
+                  전략으로 프로젝트 협업 및 관리를 할 수 있습니다.
+                </li>
+                <li>
+                  <i class="fa-solid fa-circle-check description-icon"></i>
+                  Figma를 이용해 웹 디자인을 할 수 있으며 프로젝트에 적용할 수
+                  있습니다.
+                </li>
+                <li>
+                  <i class="fa-solid fa-circle-check description-icon"></i>
+                  Postman, swagger와 같은 API 명세서(문서)를 읽고 이해하며
+                  개발을 할 수 있습니다.
+                </li>
+              </ul>
+            </li>
+          </ul>
+          <div class="slide-prev-btn">
+            <i class="fa-solid fa-chevron-left"></i>
+          </div>
+          <div class="slide-next-btn">
+            <i class="fa-solid fa-chevron-right"></i>
+          </div>
+
+          <ul class="slide-pagination"></ul>
+        </section>
+      </section>
       <!--Projects-->
       <section id="projects" class="section">
         <div class="max-container">
